[gd_scene load_steps=2 format=3 uid="uid://by5xqkpdiio2o"]

[ext_resource type="Script" path="res://src/screens/main/auction_control/auction_control.gd" id="1_1ofna"]

[node name="AuctionControl" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 0.221
anchor_bottom = 0.069
offset_right = 15.68
offset_bottom = -0.520004
theme_override_constants/separation = 20
script = ExtResource("1_1ofna")

[node name="Labels" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Player" type="Label" parent="Labels"]
layout_mode = 2
text = "Consigli"
horizontal_alignment = 1

[node name="Team" type="Label" parent="Labels"]
layout_mode = 2
text = "SAS"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 80
alignment = 1

[node name="Previous" type="Button" parent="Buttons"]
layout_mode = 2
text = "<<"

[node name="Auction" type="Button" parent="Buttons"]
layout_mode = 2
text = "AUCTION"

[node name="Assign" type="Button" parent="Buttons"]
layout_mode = 2
text = "ASSIGN"

[node name="Next" type="Button" parent="Buttons"]
layout_mode = 2
text = ">>"

[connection signal="pressed" from="Buttons/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Buttons/Auction" to="." method="_on_auction_pressed"]
[connection signal="pressed" from="Buttons/Assign" to="." method="_on_assign_pressed"]
[connection signal="pressed" from="Buttons/Next" to="." method="_on_next_pressed"]
